# rgu-labs-term4-kursach

./: README.md
kursach/: kursach.yaml
kursach/sections/: intro.yaml  references.yaml  task01.yaml  task02.yaml  task03.yaml  task04.yaml  task05.yaml  task06.yaml  task07.yaml  task08.yaml  task09.yaml  task10.yaml  task11.yaml  task12.yaml  task13.yaml
kursach/style/: style.yaml
scripts/: build_kursach.sh  build_kursach_autogen.sh  build_tasks.sh  verify_dependencies.sh
tasks/01-alphabet-sampling/: CMakeLists.txt
tasks/02-epidemic-simulation/: CMakeLists.txt
tasks/03-rumor-propagation/: CMakeLists.txt
tasks/04-random-walk-2d/: CMakeLists.txt
tasks/04-random-walk-2d/qml/: FilePickerDialog.qml  Main.qml  TrajectoryChart.qml
tasks/04-random-walk-2d/src/: main.cpp  point_walk_controller.cpp  point_walk_controller.hpp  point_walk_sim.cpp  point_walk_sim.hpp
tasks/05-cluster-pattern/: CMakeLists.txt
tasks/06-step-function/: CMakeLists.txt  config.json
tasks/07-complex-walk/: CMakeLists.txt
tasks/08-barrel-explosion/: CMakeLists.txt
tasks/09-cryptanalysis/: CMakeLists.txt
tasks/10-coin-tossing/: CMakeLists.txt
tasks/11-discrete-rv/: CMakeLists.txt
tasks/12-buffon-needle/: CMakeLists.txt
tasks/13-graph-statistics/: CMakeLists.txt  config.json
tasks/13-graph-statistics/src/: arena_allocator.cpp  arena_allocator.h  arena_resource.h  check.h  graph.cpp  graph.h  macros.h  main.cpp  memory_block.h  memory_units.h  os_memory.cpp  os_memory.h  persistent_allocator.cpp  persistent_allocator.h  persistent_resource.h  scope_arena.h  simulator.cpp  simulator.h  solvers_connectivity.cpp  solvers_connectivity.h  solvers_cycle.cpp  solvers_cycle.h  solvers_mst.cpp  solvers_mst.h  solvers_spanning.cpp  solvers_spanning.h  types.h  virtual_heap.cpp  virtual_heap.h
(+31 files in other folders)
